CMAKE_MINIMUM_REQUIRED( VERSION 2.8 ) #define VERSION
PROJECT( rgbd-slam ) # define PROJECT name
SET( CMAKE_CXX_COMPILER "g++" ) # set compiler 

SET( EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin )

SET( LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib )
LINK_DIRECTORIES( ${PROJECT_SOURCE_DIR}/lib )

INCLUDE_DIRECTORIES( ${PROJECT_SOURCE_DIR}/include )

ADD_SUBDIRECTORY( ${PROJECT_SOURCE_DIR}/src )

